// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compose renders 1`] = `
<Screen
  drawUnderNavBar={true}
  leftBarButtons={
    Array [
      Object {
        "action": [Function],
        "testID": "compose-message.cancel",
        "title": "Cancel",
      },
    ]
  }
  navBarStyle="modal"
  rightBarButtons={
    Array [
      Object {
        "action": [Function],
        "disabled": true,
        "style": "done",
        "testID": "compose-message.send",
        "title": "Send",
      },
      Object {
        "accessibilityLabel": "Edit attachments (0)",
        "action": [Function],
        "badge": false,
        "image": Object {
          "testUri": "../../../src/images/paperclip-icon.png",
        },
        "testID": "compose-message.attach",
      },
    ]
  }
  showDismissButton={false}
  title="New Message"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <ModalOverlay
      activityIndicatorColor="#fff"
      animationType="fade"
      backgroundColor="rgba(0,0,0,0.8)"
      height={170}
      showActivityIndicator={true}
      text="Sending..."
      transparent={true}
      visible={false}
      width={170}
    />
    <KeyboardAwareScrollView
      contentContainerStyle={
        Object {
          "flexGrow": 1,
          "paddingBottom": 16,
        }
      }
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <ForwardRef
        accessibilityLabel="Select a Course"
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        accessibilityValue={
          Object {
            "text": null,
          }
        }
        accessible={true}
        onPress={[Function]}
        style={
          Object {
            "borderBottomColor": "#C7CDD1",
            "borderBottomWidth": 0.5,
            "paddingHorizontal": 16,
          }
        }
        testID="compose.course-select"
        underlayColor="#ffffff00"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "height": 54,
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#556572",
                  "fontSize": 16,
                  "lineHeight": 19,
                },
                undefined,
              ]
            }
          >
            Select a Course
          </Text>
          <DisclosureIndicator />
        </View>
      </ForwardRef>
      <View
        style={
          Object {
            "borderBottomColor": "#C7CDD1",
            "borderBottomWidth": 0.5,
            "paddingHorizontal": 16,
          }
        }
      >
        <TextInput
          accessibilityLabel="Subject"
          allowFontScaling={true}
          editable={true}
          onChangeText={[Function]}
          placeholder="Subject"
          placeholderTextColor="#556572"
          rejectResponderTermination={true}
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontFamily": "Lato-Regular",
                "fontSize": 16,
                "height": 54,
                "lineHeight": 19,
              },
              Object {
                "color": "#556572",
                "fontSize": 16,
                "lineHeight": 19,
              },
              Object {
                "color": "#2D3B45",
              },
            ]
          }
          testID="compose-message.subject-text-input"
          underlineColorAndroid="transparent"
          value={null}
        />
      </View>
      <RowWithSwitch
        border="bottom"
        identifier="compose-message.send-all-toggle"
        onValueChange={[Function]}
        title="Send individual message to each recipient"
        value={false}
      />
      <TextInput
        accessibilityLabel="Message body"
        allowFontScaling={true}
        multiline={true}
        onChangeText={[Function]}
        placeholder="Compose Message"
        placeholderTextColor="#556572"
        rejectResponderTermination={true}
        scrollEnabled={false}
        style={
          Object {
            "color": "#2D3B45",
            "fontFamily": "Lato-Regular",
            "fontSize": 16,
            "lineHeight": 24,
            "paddingBottom": 8,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 10,
          }
        }
        testID="compose-message.body-text-input"
        underlineColorAndroid="transparent"
      />
    </KeyboardAwareScrollView>
  </View>
</Screen>
`;

exports[`Compose renders after picking a course 1`] = `
<Screen
  drawUnderNavBar={true}
  leftBarButtons={
    Array [
      Object {
        "action": [Function],
        "testID": "compose-message.cancel",
        "title": "Cancel",
      },
    ]
  }
  navBarStyle="modal"
  rightBarButtons={
    Array [
      Object {
        "action": [Function],
        "disabled": true,
        "style": "done",
        "testID": "compose-message.send",
        "title": "Send",
      },
      Object {
        "accessibilityLabel": "Edit attachments (0)",
        "action": [Function],
        "badge": false,
        "image": Object {
          "testUri": "../../../src/images/paperclip-icon.png",
        },
        "testID": "compose-message.attach",
      },
    ]
  }
  showDismissButton={false}
  title="New Message"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <ModalOverlay
      activityIndicatorColor="#fff"
      animationType="fade"
      backgroundColor="rgba(0,0,0,0.8)"
      height={170}
      showActivityIndicator={true}
      text="Sending..."
      transparent={true}
      visible={false}
      width={170}
    />
    <KeyboardAwareScrollView
      contentContainerStyle={
        Object {
          "flexGrow": 1,
          "paddingBottom": 16,
        }
      }
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <ForwardRef
        accessibilityLabel="Select a Course"
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        accessibilityValue={
          Object {
            "text": "Learn React Native",
          }
        }
        accessible={true}
        onPress={[Function]}
        style={
          Object {
            "borderBottomColor": "#C7CDD1",
            "borderBottomWidth": 0.5,
            "paddingHorizontal": 16,
          }
        }
        testID="compose.course-select"
        underlayColor="#ffffff00"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "height": 54,
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#556572",
                  "fontSize": 16,
                  "lineHeight": 19,
                },
                Object {
                  "color": "#2D3B45",
                },
              ]
            }
          >
            Learn React Native
          </Text>
          <DisclosureIndicator />
        </View>
      </ForwardRef>
      <View
        style={
          Array [
            Object {
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
              "paddingHorizontal": 16,
            },
            Object {
              "alignItems": "flex-start",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "minHeight": 54,
            },
          ]
        }
      >
        <View
          style={
            Object {
              "height": 54,
              "justifyContent": "center",
              "padding": 6,
              "paddingLeft": 0,
            }
          }
          testID="compose.recipients-placeholder"
        >
          <Text
            style={
              Object {
                "color": "#556572",
                "fontSize": 16,
                "lineHeight": 19,
              }
            }
          >
            To
          </Text>
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
              "flexWrap": "wrap",
              "paddingVertical": 8,
            }
          }
        />
        <TouchableOpacity
          accessibilityLabel="Add recipient"
          accessibilityTraits={
            Array [
              "button",
            ]
          }
          onPress={[Function]}
          style={
            Object {
              "height": 54,
              "justifyContent": "center",
            }
          }
          testID="compose.add-recipient"
        >
          <Image
            source={
              Object {
                "testUri": "../../../src/images/Add.png",
              }
            }
            style={
              Object {
                "tintColor": undefined,
              }
            }
          />
        </TouchableOpacity>
      </View>
      <View
        style={
          Object {
            "borderBottomColor": "#C7CDD1",
            "borderBottomWidth": 0.5,
            "paddingHorizontal": 16,
          }
        }
      >
        <TextInput
          accessibilityLabel="Subject"
          allowFontScaling={true}
          editable={true}
          onChangeText={[Function]}
          placeholder="Subject"
          placeholderTextColor="#556572"
          rejectResponderTermination={true}
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontFamily": "Lato-Regular",
                "fontSize": 16,
                "height": 54,
                "lineHeight": 19,
              },
              Object {
                "color": "#556572",
                "fontSize": 16,
                "lineHeight": 19,
              },
              Object {
                "color": "#2D3B45",
              },
            ]
          }
          testID="compose-message.subject-text-input"
          underlineColorAndroid="transparent"
          value={null}
        />
      </View>
      <RowWithSwitch
        border="bottom"
        identifier="compose-message.send-all-toggle"
        onValueChange={[Function]}
        title="Send individual message to each recipient"
        value={false}
      />
      <TextInput
        accessibilityLabel="Message body"
        allowFontScaling={true}
        multiline={true}
        onChangeText={[Function]}
        placeholder="Compose Message"
        placeholderTextColor="#556572"
        rejectResponderTermination={true}
        scrollEnabled={false}
        style={
          Object {
            "color": "#2D3B45",
            "fontFamily": "Lato-Regular",
            "fontSize": 16,
            "lineHeight": 24,
            "paddingBottom": 8,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 10,
          }
        }
        testID="compose-message.body-text-input"
        underlineColorAndroid="transparent"
      />
    </KeyboardAwareScrollView>
  </View>
</Screen>
`;

exports[`Compose renders reply 1`] = `
<Screen
  drawUnderNavBar={true}
  leftBarButtons={
    Array [
      Object {
        "action": [Function],
        "testID": "compose-message.cancel",
        "title": "Cancel",
      },
    ]
  }
  navBarStyle="modal"
  rightBarButtons={
    Array [
      Object {
        "action": [Function],
        "disabled": true,
        "style": "done",
        "testID": "compose-message.send",
        "title": "Send",
      },
      Object {
        "accessibilityLabel": "Edit attachments (0)",
        "action": [Function],
        "badge": false,
        "image": Object {
          "testUri": "../../../src/images/paperclip-icon.png",
        },
        "testID": "compose-message.attach",
      },
    ]
  }
  showDismissButton={false}
  title="New Message"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <ModalOverlay
      activityIndicatorColor="#fff"
      animationType="fade"
      backgroundColor="rgba(0,0,0,0.8)"
      height={170}
      showActivityIndicator={true}
      text="Sending..."
      transparent={true}
      visible={false}
      width={170}
    />
    <KeyboardAwareScrollView
      contentContainerStyle={
        Object {
          "flexGrow": 1,
          "paddingBottom": 16,
        }
      }
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <ForwardRef
        accessibilityLabel="Select a Course"
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        accessibilityValue={
          Object {
            "text": "Course 1",
          }
        }
        accessible={false}
        style={
          Object {
            "borderBottomColor": "#C7CDD1",
            "borderBottomWidth": 0.5,
            "paddingHorizontal": 16,
          }
        }
        testID="compose.course-select"
        underlayColor="#ffffff00"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "height": 54,
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#556572",
                  "fontSize": 16,
                  "lineHeight": 19,
                },
                Object {
                  "color": "#2D3B45",
                },
              ]
            }
          >
            Course 1
          </Text>
        </View>
      </ForwardRef>
      <View
        style={
          Array [
            Object {
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
              "paddingHorizontal": 16,
            },
            Object {
              "alignItems": "flex-start",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "minHeight": 54,
            },
          ]
        }
      >
        <View
          style={
            Object {
              "height": 54,
              "justifyContent": "center",
              "padding": 6,
              "paddingLeft": 0,
            }
          }
          testID="compose.recipients-placeholder"
        >
          <Text
            style={
              Object {
                "color": "#556572",
                "fontSize": 16,
                "lineHeight": 19,
              }
            }
          >
            To
          </Text>
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
              "flexWrap": "wrap",
              "paddingVertical": 8,
            }
          }
        />
        <TouchableOpacity
          accessibilityLabel="Add recipient"
          accessibilityTraits={
            Array [
              "button",
            ]
          }
          onPress={[Function]}
          style={
            Object {
              "height": 54,
              "justifyContent": "center",
            }
          }
          testID="compose.add-recipient"
        >
          <Image
            source={
              Object {
                "testUri": "../../../src/images/Add.png",
              }
            }
            style={
              Object {
                "tintColor": undefined,
              }
            }
          />
        </TouchableOpacity>
      </View>
      <View
        style={
          Object {
            "borderBottomColor": "#C7CDD1",
            "borderBottomWidth": 0.5,
            "paddingHorizontal": 16,
          }
        }
      >
        <TextInput
          accessibilityLabel="Subject"
          allowFontScaling={true}
          editable={false}
          onChangeText={[Function]}
          placeholder="Subject"
          placeholderTextColor="#556572"
          rejectResponderTermination={true}
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontFamily": "Lato-Regular",
                "fontSize": 16,
                "height": 54,
                "lineHeight": 19,
              },
              Object {
                "color": "#556572",
                "fontSize": 16,
                "lineHeight": 19,
              },
              Object {
                "color": "#2D3B45",
              },
            ]
          }
          testID="compose-message.subject-text-input"
          underlineColorAndroid="transparent"
          value="(no subject)"
        />
      </View>
      <RowWithSwitch
        border="bottom"
        identifier="compose-message.send-all-toggle"
        onValueChange={[Function]}
        title="Send individual message to each recipient"
        value={false}
      />
      <TextInput
        accessibilityLabel="Message body"
        allowFontScaling={true}
        multiline={true}
        onChangeText={[Function]}
        placeholder="Compose Message"
        placeholderTextColor="#556572"
        rejectResponderTermination={true}
        scrollEnabled={false}
        style={
          Object {
            "color": "#2D3B45",
            "fontFamily": "Lato-Regular",
            "fontSize": 16,
            "lineHeight": 24,
            "paddingBottom": 8,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 10,
          }
        }
        testID="compose-message.body-text-input"
        underlineColorAndroid="transparent"
      />
    </KeyboardAwareScrollView>
  </View>
</Screen>
`;

exports[`Compose renders with passed in recipients 1`] = `
<Screen
  drawUnderNavBar={true}
  leftBarButtons={
    Array [
      Object {
        "action": [Function],
        "testID": "compose-message.cancel",
        "title": "Cancel",
      },
    ]
  }
  navBarStyle="modal"
  rightBarButtons={
    Array [
      Object {
        "action": [Function],
        "disabled": true,
        "style": "done",
        "testID": "compose-message.send",
        "title": "Send",
      },
      Object {
        "accessibilityLabel": "Edit attachments (0)",
        "action": [Function],
        "badge": false,
        "image": Object {
          "testUri": "../../../src/images/paperclip-icon.png",
        },
        "testID": "compose-message.attach",
      },
    ]
  }
  showDismissButton={false}
  title="New Message"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <ModalOverlay
      activityIndicatorColor="#fff"
      animationType="fade"
      backgroundColor="rgba(0,0,0,0.8)"
      height={170}
      showActivityIndicator={true}
      text="Sending..."
      transparent={true}
      visible={false}
      width={170}
    />
    <KeyboardAwareScrollView
      contentContainerStyle={
        Object {
          "flexGrow": 1,
          "paddingBottom": 16,
        }
      }
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <ForwardRef
        accessibilityLabel="Select a Course"
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        accessibilityValue={
          Object {
            "text": null,
          }
        }
        accessible={true}
        onPress={[Function]}
        style={
          Object {
            "borderBottomColor": "#C7CDD1",
            "borderBottomWidth": 0.5,
            "paddingHorizontal": 16,
          }
        }
        testID="compose.course-select"
        underlayColor="#ffffff00"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "height": 54,
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#556572",
                  "fontSize": 16,
                  "lineHeight": 19,
                },
                undefined,
              ]
            }
          >
            Select a Course
          </Text>
          <DisclosureIndicator />
        </View>
      </ForwardRef>
      <View
        style={
          Object {
            "borderBottomColor": "#C7CDD1",
            "borderBottomWidth": 0.5,
            "paddingHorizontal": 16,
          }
        }
      >
        <TextInput
          accessibilityLabel="Subject"
          allowFontScaling={true}
          editable={true}
          onChangeText={[Function]}
          placeholder="Subject"
          placeholderTextColor="#556572"
          rejectResponderTermination={true}
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontFamily": "Lato-Regular",
                "fontSize": 16,
                "height": 54,
                "lineHeight": 19,
              },
              Object {
                "color": "#556572",
                "fontSize": 16,
                "lineHeight": 19,
              },
              Object {
                "color": "#2D3B45",
              },
            ]
          }
          testID="compose-message.subject-text-input"
          underlineColorAndroid="transparent"
          value={null}
        />
      </View>
      <RowWithSwitch
        border="bottom"
        identifier="compose-message.send-all-toggle"
        onValueChange={[Function]}
        title="Send individual message to each recipient"
        value={false}
      />
      <TextInput
        accessibilityLabel="Message body"
        allowFontScaling={true}
        multiline={true}
        onChangeText={[Function]}
        placeholder="Compose Message"
        placeholderTextColor="#556572"
        rejectResponderTermination={true}
        scrollEnabled={false}
        style={
          Object {
            "color": "#2D3B45",
            "fontFamily": "Lato-Regular",
            "fontSize": 16,
            "lineHeight": 24,
            "paddingBottom": 8,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 10,
          }
        }
        testID="compose-message.body-text-input"
        underlineColorAndroid="transparent"
      />
    </KeyboardAwareScrollView>
  </View>
</Screen>
`;
